# docs.substrate.io-tuts

./: .gitmodules  Cargo.toml  Notes.md  README.md  customSpec.json  customSpecRaw.json
pallets/template/src/: lib.rs
polkadot-sdk-parachain-template/: para-2000-genesis-state  para-2000-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json
runtime/: Cargo.toml
runtime/src/: lib.rs
