[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
solochain-template-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }

clap = { version = "4" }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.23.2" }
serde_json = { version = "1.0.114", default-features = false }
scale-info = { version = "2.11.1", default-features = false }

###

codec = { git = "https://github.com/paritytech/parity-scale-codec/", default-features = false, package = "parity-scale-codec" }

frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
